# radar_infineon_sdk

./: .gitignore  .gitignore~  .gitmodules  .sconsign.dblite  CMakeLists.txt  Makefile  README.md  ReadMe.txt  SConscript  SConscript~  SConstruct  bootstrap.sh  compile.sh  graph_waveform.py
doc/: radar_sdk_doc.html
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_000004_000003.html  dir_159c81cb8a5c0de9d52e9d60d40a4717.html  dir_159c81cb8a5c0de9d52e9d60d40a4717.js  dir_159c81cb8a5c0de9d52e9d60d40a4717_dep.map  dir_159c81cb8a5c0de9d52e9d60d40a4717_dep.md5  dir_4aef5d9bdcacc80aaeaf2000aebe9a3a.html  dir_4aef5d9bdcacc80aaeaf2000aebe9a3a.js  dir_59efd83fe72ca8e97dda367473116393.html  dir_59efd83fe72ca8e97dda367473116393.js  dir_59efd83fe72ca8e97dda367473116393_dep.map  dir_59efd83fe72ca8e97dda367473116393_dep.md5  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.js  dir_6719ab1f1f7655efc2fa43f7eb574fd1_dep.map  dir_6719ab1f1f7655efc2fa43f7eb574fd1_dep.md5  files.html  files.js  functions.html  (+697 more)
inc/: .presence_sensing.h.swp  device_config.hpp  presence_sensing_config.h  radar.hpp  radar_config.hpp  radar_control.hpp  range_spectrum.hpp
include/: dsp.hpp  fft_circular.hpp  mti.hpp  packet.hpp  radar_config.hpp  radar_control.hpp  tcp_client.hpp
pyserv/: dsp.py
scripts/: presence_detection.service  presence_detection.sh  presence_detection_install.sh  presence_detection_uninstall.sh
src/: app_presence_detection.c  device_config.cpp  dsp.cpp  fft_circular.cpp  main.cpp  main.cpp~  mti.cpp  presence_sensing.backup  radar.cpp  radar_config.cpp  radar_control.cpp  range_spectrum.cpp  tcp_client.cpp
tests/: graph_waveform.py
(+111 files in other folders)
